[project]
name = "grizzly-loadtester-extras-async-messaged"
dynamic = ["version"]
description = "Daemon for handling async messaging [for grizzly] over zmq, due to native libraries (pymqi) does not play well with gevent."
readme = "README.md"
authors = [
    { name = "biometria", email="opensource@biometria.se" },
]
maintainers = [
    { name = "Mikael Göransson", email = "github@mgor.se" }
]
requires-python = ">=3.10"
dependencies = [
    "azure-servicebus>=7.14.2",
    "pyzmq==27.0.2",
    "setproctitle>=1.3.6",
    "grizzly-loadtester-common"
]

[project.scripts]
async-messaged = "async_messaged.daemon:main"

[project.optional-dependencies]
mq = [
    "pymqi>=1.12.11",
]

[build-system]
requires = ["hatchling==1.27.0", "hatch-vcs==0.5.0"]
build-backend = "hatchling.build"

[tool.uv.sources]
grizzly-loadtester-common = { workspace = true }

[tool.hatch.build.hooks.custom]
path = "../../hatch_build.py"

[tool.hatch.metadata.hooks.custom]
path = "../../hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/async_messaged"]

[tool.hatch.build.targets.sdist]
include = ["src/async_messaged", "tests/"]

[tool.hatch.build.targets.sdist.force-include]
"../../LICENSE.md" = "LICENSE.md"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
tag_regex = "^extras/async-messaged@(?P<version>[v]\\d+(?:\\.\\d+){0,2}[^\\+]*?)(?:\\+.*)?$"
scm.git.describe_command = "git describe --dirty --tags --long --abbrev=40 --match 'extras/async-messaged@v*[0-9]*'"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
root = "../../"

[tool.hatch.build.hooks.vcs]
version-file = "src/async_messaged/__version__.py"

[dependency-groups]
dev = []
